# cmake-examples

./: .gitignore  README.md
app/: CMakeLists.txt  main.cpp
app/include/: app.h
app/src/: app.cpp  main.cpp
lib/: hello.cpp
